# Lab-auto

./: .env.example  .gitignore  INTRO.md  README.md  export_unified_forms.py  main.py  migration_add_categories.sql  migration_add_categories_to_view.sql  pyproject.toml  update_categories.py
.github/workflows/: scrape.yml
legal_scraper/: .gitignore  README.md  app.py  config.py  requirements.txt
legal_scraper/classifier/: classify.py
legal_scraper/data/: snapshot.json  분류체계.xlsx
legal_scraper/pages/: 1_법률서식.py  2_정부부처_계약서.py
legal_scraper/scrapers/: ecfs_scraper.py  ekt_scraper.py  klac_scraper.py
legal_scraper/scrapers/gov_contracts/: __init__.py  base_playwright_scraper.py  base_scraper.py  config.py  run_all.py
legal_scraper/scrapers/gov_contracts/scrapers/: __init__.py  bai_scraper.py  customs_scraper.py  forest_scraper.py  ftc_scraper.py  khs_scraper.py  mafra_scraper.py  mcst_scraper.py  mfds_scraper.py  moel_scraper.py  mofa_scraper.py  mogef_scraper.py  mohw_scraper.py  moip_scraper.py  mois_scraper.py  moj_scraper.py  molit_scraper.py  motie_scraper.py  mpva_scraper.py  (+6 more)
legal_scraper/utils/: ekt_proxy.py  excel_writer.py  hwp_qr_remover.py  logger.py  supabase_client.py
web/: .env.local.example  middleware.ts  package-lock.json  package.json
web/app/: SourceChart.tsx  layout.tsx  page.tsx
web/app/admin/: AdminClient.tsx  page.tsx
web/app/contracts/: ContractsClient.tsx  page.tsx
web/app/legal/: LegalFormsClient.tsx  page.tsx
web/app/login/: page.tsx
web/components/: DataTable.tsx
web/lib/supabase/: admin.ts  client.ts  server.ts
(+10 files in other folders)
