[project]
name = "raw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.14.0",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "playwright>=1.58.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
]
